# tutorlolv2_web

./: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
public/: highliter.css  main.css
src/: main.rs  model.rs
src/calculator/: mod.rs  page.rs  reducer.rs
src/calculator/components/inputs/: dragon.rs  enemies.rs  mod.rs  player.rs
src/components/: image.rs  mod.rs
src/components/tables/: header.rs
src/documentation/: page.rs
src/utils/: cache.rs  fetch.rs  mod.rs
