[package]
name = "tutorlolv2_web"
version = "0.1.0"
edition = "2024"

[dependencies]
tutorlolv2_gen = { path = "../tutorlolv2/tutorlolv2_gen", features = ["glob"] }
bincode = "2.0.1"
web-sys = { version = "0.3.78", features = ["AbortController"] }
wasm-bindgen = "0.2.101"
gloo-timers = "0.3.0"
brotli = "8.0.2"
gloo-net = { version = "0.6.0", default-features = false, features = ["http"] }
wasm-bindgen-futures = "0.4.54"
pastey = "0.2.1"
yew = { version = "0.22.0", features = ["csr"] }
